SCT-9383: Several minor fixes that Code Inspection caught.
None of these should be functional changes, but implement new code or new coding conventions introduced with Java 11.